RESOLVED FIXED69305
REGRESSION (r66599): -[DOMNode boundingBox] returns the zero rect for SVG elements
https://bugs.webkit.org/show_bug.cgi?id=69305
Summary REGRESSION (r66599): -[DOMNode boundingBox] returns the zero rect for SVG ele...
mitz
Reported 2011-10-03 16:39:28 PDT
REGRESSION (r66599): -[DOMNode boundingBox] returns the zero rect for SVG elements
Attachments
Patch (11.42 KB, patch)
2011-10-03 16:45 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2011-10-03 16:39:51 PDT
mitz
Comment 2 2011-10-03 16:45:42 PDT
Simon Fraser (smfr)
Comment 3 2011-10-03 17:05:17 PDT
Comment on attachment 109549 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=109549&action=review > Source/WebCore/ChangeLog:8 > + Reviewed by NOBODY (OOPS!). > + > + Test: svg/custom/boundingBox.html It would be nice to see some text describing the gist of the change here.
mitz
Comment 4 2011-10-03 17:09:49 PDT
Note You need to log in before you can comment on or make changes to this bug.